css/style.css
/* ... */
#menu ul li.logo {
	float:left;
	padding-left:30px;
}

#menu ul li.logo:hover { background:none; }

#menu ul li.logo a {
	background:url(../images/apachedrill.png) no-repeat center;
	background-size:auto 27px;
	display:block;
	height:50px;
	padding:0;
	width:80px;
}

#menu ul li a {
	color:#FFF;
	text-decoration:none;
	line-height:50px;
	padding:14px 20px;
}
/*
#menu ul li.d, #menu ul li.d:hover {
	background:#4aaf4c;
	font-weight:bold;
	text-transform:uppercase;
}
*/
#menu ul li.d, #menu ul li.d:hover {
	background:url(../images/download-ico.png) no-repeat left center #4aaf4c;
	background-size:13px auto;
	background-position:24px 16px;
	display:block;
	float:right;
	font-size:12px;
	height:50px;
	text-transform:uppercase;
	overflow:hidden;
}

#menu ul li.d:hover {
	background-color:#348436;
}

#menu ul li.d * {
	cursor:pointer;
}

#menu ul li.d a {
	padding:0 30px 0 45px;
	display:block;
	height:50px;
}


#menu ul li.l {
	cursor:pointer;	
}

#menu ul li.l span {
	background:url(../images/len.png) no-repeat center;
	background-size:auto 16px;
	display:block;
	line-height:50px;
	padding:0 20px;
	width:16px;
}

#menu ul li.l.open {
	background-color:#145aa8;
}

#menu ul li#twitter-menu-item {
  width:30px;
  padding-left: 2px;
  padding-right:10px;
}

#menu ul li#twitter-menu-item a {
  padding: 10px;
}

#menu ul li#twitter-menu-item img {
  width: 22px;
}

#menu ul li ul {
	background:#1a6bc7;
	display:none;
	margin:0;
	padding:0;
	position:absolute;
	text-align:left;
}

#menu ul li ul li {
	display:block;
}

#menu ul li ul li a {
	display:block;
	line-height:30px;
	padding:3px 20px;
}

#menu ul li ul li a:hover {
	background:#145aa8;
}

#menu ul li:hover {
	background:#1a6bc7;	
}

#menu ul li:hover ul {
	display:block;
}
#menu ul li.clear-float{
  display:none;
}
#subhead {
	background:#145aa8;
	color:#FFF;
	font-size:12px;
	font-weight:bold;
	height:40px;
	line-height:40px;
	left:0px;
	letter-spacing:1px;
	right:0px;
	position:fixed;	
	text-align:center;
	text-transform:uppercase;
	top:10px;
	z-index:4;	
	
	-webkit-transition: all 0.3s;
	transition: all 0.3s;
}

#subhead.show {
	top:50px;
}

#subhead ul {
	list-style:none;
	margin:0;
	padding:0;
}

#subhead ul li {
	display:inline-block;
	list-style:none;
	margin:0;
	padding:0 35px 0 35px;
}

#subhead ul li a {
	background-size:16px auto;
	background-position:left center;
	background-repeat:no-repeat;
	color:#FFF;
	display:block;
	padding:0 0 0 25px;
	text-decoration:none;
}

#subhead ul li.ag a {
	background-image:url(../images/agility-w.png);
}

#subhead ul li.fl a {
	background-image:url(../images/flexibility-w.png);
}

#subhead ul li.fa a {
	background-image:url(../images/familiarity-w.png);
}


#search {
	background:#145aa8;
	display:none;
	left:0px;
	right:0px;
	padding:30px;
	position:fixed;	
	top:50px;
	z-index:5;
}

#search.r {
	position:absolute;
	width:779px;	
}

#search input {
	background:transparent;
	border:none;
	color:#FFF;
	font-family:"Lato";
	font-size:34px;
	font-weight:lighter;
	width:100%;
}

#header {
	background:url(../images/reel-bg.png) no-repeat;
	background-size:cover;
	height:300px;
	overflow:hidden;
	position:relative;
}

#header .scroller {
	margin-left:0px;	
	overflow:hidden;
}

#header .scroller .item {
	
	float:left;
	height:300px;
	position:relative;
	width:100%;	
	z-index:1;
}

#header .scroller .item p a {
	color:#FFF;
	font-weight:bold;
	overflow: hidden;
	text-decoration:none;	
	
	position: relative;
	display: inline-block;
	outline: none;
	vertical-align: bottom;
	text-decoration: none;
	white-space: nowrap;
}

#header .scroller .item p a::before {
	position: absolute;
	top: 0;
	left: 0;
	z-index: -1;
	width: 100%;
	height: 100%;
	background: rgba(149,165,166,0.4);
	content: '';
	-webkit-transition: -webkit-transform 0.3s;
	transition: transform 0.3s;
	-webkit-transform: scaleY(0.618) translateX(-100%);
	transform: scaleY(0.618) translateX(-100%);
}

#header .scroller .item p a:hover::before,
#header .scroller .item p a:focus::before {
	-webkit-transform: scaleY(0.618) translateX(0);
	transform: scaleY(0.618) translateX(0);
}


#header .scroller .item .tc {
	color:#FFF;
	margin-left:80px;
	position:absolute;
	width:530px;
}

#header .scroller .item .tc h1 {
	font-size:36px;
	font-weight:lighter;
	margin:0 0 8px 0;
	padding:0;
}

#header .scroller .item .tc p {
	font-size:14px;
	font-weight:lighter;
	line-height:24px;
	margin:0;
	padding:0;
}

#header .scroller .item .btn {
	background: none;
	border: 2px solid #fff;
	cursor: pointer;
	color:#FFF;
	display: inline-block;
	font-size:12px;
	font-weight: bold;
	outline: none;
	margin-top:18px;
	position: relative;
	padding: 5px 30px;
	text-decoration:none;
	text-transform: uppercase;
	
	-webkit-transition: all 0.3s;
	-moz-transition: all 0.3s;
	transition: all 0.3s;
}

#header .scroller .item .btn:after {
	content: '';
	position: absolute;
	z-index: -1;
	-webkit-transition: all 0.3s;
	-moz-transition: all 0.3s;
	transition: all 0.3s;
}

#header .scroller .item .btn-1c:after {
	width: 0%;
	height: 100%;
	top: 0;
	left: 0;
	background: #fff;
}

#header .scroller .item .btn-1c:hover,
#header .scroller .item .btn-1c:active {
	color: #0e83cd;
}

#header .scroller .item .btn-1c:hover:after,
#header .scroller .item .btn-1c:active:after {
	width: 100%;
}

#header .aLeft {
	cursor:pointer;
	height:30px;
	left:20px;
	margin-top:-15px;
	position:absolute;
	top:50%;
	width:30px;	
	z-index:2;
}

#header .aRight {
	cursor:pointer;
	height:30px;
	right:20px;
	margin-top:-15px;
	position:absolute;
	top:50%;
	width:30px;	
	z-index:2;
}

.dots {
	bottom:30px;
	right:80px;
	position:absolute;
	z-index:2;	
}

.dots .dot {
	border-radius: 50%;
	background-color: transparent;
	box-shadow: inset 0 0 0 2px white;
	-webkit-transition: box-shadow 0.3s ease;
	transition: box-shadow 0.3s ease;
	
	cursor:pointer;
	display:inline-block;
	height:10px;
	margin-left:10px;
	width:10px;
}

.dots .dot:hover,
.dots .dot:focus {
	box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.6)
}
/* ... */

